--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labelizr",
+  "name": "dimensionator",
   "version": "0.1.0",
   "description": "provides a cross browser way to measure the height and width of a dom element that always excludes the scrollbar",
   "main": "labelizr.js",
