--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dimensionator",
   "version": "0.2.0",
   "description": "provides a cross browser way to measure the height and width of a dom element that always excludes the scrollbar",
-  "main": "labelizr.js",
+  "main": "dimensionator.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,10 @@
     "url": "git://github.com/azt3k/dimensionator.git"
   },
   "devDependencies": {
-    "uglify-js": "2.4.15"
+    "uglify-js": ">=2.4"
+  },
+  "dependencies": {
+    "jquery": ">=1"
   },
   "keywords": [
     "height",
